# Owon1041

./: .gitignore  AppleDevCert.b64  AppleDevCert.p12  CMakeLists.txt  ConnectDialog.cpp  ConnectDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Owon.icns  README.md  Settings.cpp  Settings.h  main.cpp
.github/workflows/: build.yml  release.yml
doc/: README.md
linux/: owon1041.desktop
